docs/versioned_docs/version-1.0.0/reference/attachments.mdx
<!-- Generated by port_legacy_docs.py v2 from v1.0.0 (3125e5c1e7bc33b5bfd5723806e01f14810511a6). Historical snapshot—do not edit directly. -->

<a id="attachments"></a>
# Attachments

:::warning[Warning: Deprecated Feature]

Attachments, while still accepted by the Slack API, have long (for years now) been considered a deprecated feature.

That said, there is currently no other way to achieve the vertical, colored bars next to content.

:::
### Attachment {#attachments.Attachment}

**Class**

```python
Attachment(blocks: Optional[Union[Block, List[Block]]] = None, color: Optional[Union[str, Color]] = None, fields: Optional[Union[Field, List[Field]]] = None)
```

<div className="api-docstring">

Lower priority content can be attached to messages using Attachments.
This is content that doesn't necessarily need to be seen to appreciate
the intent of the message, but perhaps adds further context or additional information.

See [https://api.slack.com/reference/messaging/attachments](https://api.slack.com/reference/messaging/attachments).

N.B: `fields` is a deprecated field, included only for legacy purposes. Other legacy
fields, e.g. `author_name` are deliberately omitted as they were never implemented in
`slackblocks`.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `blocks` | `Optional[Union[Block, List[Block]]]` | an array of Blocks that define the content of the attachment. |
| `color` | `Optional[Union[str, Color]]` | the color (in hex format, e.g. #ffffff) of the vertical bar to the left of the<br />attachment content. Consider using the `Color` enum from this module. |
| `fields` | `Optional[Union[Field, List[Field]]]` | a list of `Field` objects to be included in what's rendered in the attachment. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the `color` code provided is invalid. |

</div>

### Color {#attachments.Color}

**Class**

```python

```

<div className="api-docstring">

Color is a utility class for use with the Slack secondary attachments API.

Pass these to the `color` argument of
    [`Attachment`](/v1.0.0/reference/attachments#attachments.Attachment).

<table style={{ width: "50%" }}>
<tr>
<td><code>Color.GOOD</code></td>
<td>
<img valign='middle' alt='good' src='https://readme-swatches.vercel.app/4CAF50?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.WARNING</code></td>
<td>
<img valign='middle' alt='warning' src='https://readme-swatches.vercel.app/FFEB3B?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.DANGER</code></td>
<td>
<img valign='middle' alt='danger' src='https://readme-swatches.vercel.app/F44336?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.RED</code></td>
<td>
<img valign='middle' alt='red' src='https://readme-swatches.vercel.app/ff0000?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.BLUE</code></td>
<td>
<img valign='middle' alt='blue' src='https://readme-swatches.vercel.app/0000ff?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.YELLOW</code></td>
<td>
<img valign='middle' alt='yellow' src='https://readme-swatches.vercel.app/ffff00?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.GREEN</code></td>
<td>
<img valign='middle' alt='green' src='https://readme-swatches.vercel.app/00ff00?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.ORANGE</code></td>
<td>
<img valign='middle' alt='orange' src='https://readme-swatches.vercel.app/ff8800?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.PURPLE</code></td>
<td>
<img valign='middle' alt='purple' src='https://readme-swatches.vercel.app/8800ff?style=round'/>
</td>
</tr>
<tr>
<td><code>Color.BLACK</code></td>
<td>
<img valign='middle' alt='black' src='https://readme-swatches.vercel.app/000000?style=round'/>
</td>
</tr>
</table>

</div>

### Field {#attachments.Field}

**Class**

```python
Field(title: Optional[str] = None, value: Optional[str] = None, short: Optional[bool] = False)
```

<div className="api-docstring">

Field text objects for use with Slack's secondary attachment API.

See [https://api.slack.com/reference/messaging/attachments#fields](https://api.slack.com/reference/messaging/attachments#fields).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `title` | `Optional[str]` | text shown as a bold heading on the field. |
| `value` | `Optional[str]` | text (`mrkdwn` or `plaintext`) representing the value of the field. |
| `short` | `Optional[bool]` | whether the contents of the field is short enough to be presented in<br />multipe columns. |

</div>
